--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <header>
-<h2 class="logo">Logo</h2>
+<h2 class="logo">GOOGLE</h2>
 <nav class="navigation">
 <a href="">Home</a>
 <a href="">About</a>
@@ -22,7 +22,7 @@
 
 <div class="wrapper">
 <div class="form-box login">
-<h2> LOGO Login form </h2>
+<h2> GOOGLE Login </h2>
 
 <form action="">
 <div class="input-box">
